--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         }
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('https://mcdn.wallpapersafari.com/medium/47/99/T3nbuc.jpg');
-            background-size: cover; /* Ensure the image covers the entire screen */
-            background-position: center; /* Center the image */
-            color: white; /* Set the text color to white for better contrast */
+            background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F1493451.jpg&f=1&nofb=1&ipt=52bbc29e2dfecdf0b4c3097dadc79aebb4598965b8e065c0ebe47f7d2d56b4f0&ipo=images');
+            background-size: cover;
+            background-position: center;
+            color: white;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -24,7 +24,7 @@
             padding: 20px;
         }
         .container {
-            background: rgba(0, 0, 0, 0.7); /* Black background with opacity */
+            background: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
             padding: 40px;
             max-width: 600px;
@@ -32,12 +32,12 @@
         }
         h1 {
             font-size: 3.5em;
-            color: #ff4081; /* Pink text for the title */
+            color: #ff4081;
             margin-bottom: 20px;
         }
         p {
             font-size: 1.8em;
-            color: #ddd; /* Light gray text */
+            color: #ddd;
             margin-bottom: 30px;
         }
         .balloons {
@@ -74,11 +74,14 @@
         <p>LEBRON IS THE FUCKING GOAAAAAAAAAAAAT!</p>
         <div class="balloons">🐐🐐🐐</div>
         <div class="image-container">
-            <!-- LeBron image -->
             <img src="https://static.wikia.nocookie.net/13ac7195-af49-44be-959f-25f4411c3fd4/scale-to-width/755" alt="LeBron James, The GOAT">
         </div>
         <br>
-        <button class="button" onclick="alert('Hope you have an amazing day, Chris!')">Click to Wish Chris</button>
+        <button class="button" onclick="alert('You are a true LeBron fan!')">Click if you love LeBron</button>
     </div>
+    <audio autoplay loop>
+        <source src="your-song.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
