--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F1493451.jpg&f=1&nofb=1&ipt=52bbc29e2dfecdf0b4c3097dadc79aebb4598965b8e065c0ebe47f7d2d56b4f0&ipo=images');
+            background-image: url('https://wallpaperbat.com/pure-black-oled-wallpapers');
             background-size: cover;
             background-position: center;
             color: white;
@@ -80,7 +80,7 @@
         <button class="button" onclick="alert('You are a true LeBron fan!')">Click if you love LeBron</button>
     </div>
     <audio autoplay loop>
-        <source src="your-song.mp3" type="audio/mpeg">
+        <source src="test.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
