--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         h1 {
             font-size: 3.5em;
-            color: #ff4081;
+            color: #2938b9;
             margin-bottom: 20px;
         }
         p {
