--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             box-sizing: border-box;
         }
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Helvetica', sans-serif;
             background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Fhd%2Fpure-black-oled-pnh30c25986brd8t.jpg&f=1&nofb=1&ipt=03f1b235808b641a554ed78088f5e30bb914e905e3698bad47272abc9a50e00c&ipo=images');
             background-size: cover;
             background-position: center;
@@ -32,7 +32,7 @@
         }
         h1 {
             font-size: 3.5em;
-            color: #2938b9;
+            color: #3498db;
             margin-bottom: 20px;
         }
         p {
@@ -55,7 +55,7 @@
             transition: background-color 0.3s ease;
         }
         .button:hover {
-            background-color: #2980b9;
+            background-color: #3498db;
         }
         .image-container {
             margin-top: 30px;
