--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         h1 {
             font-size: 3.5em;
-            color: #3498db;
+            color: #4993c8;
             margin-bottom: 20px;
         }
         p {
@@ -48,14 +48,14 @@
             padding: 15px 30px;
             font-size: 1.2em;
             color: #fff;
-            background-color: #3498db;
+            background-color: #164160;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
         .button:hover {
-            background-color: #3498db;
+            background-color: #164160;
         }
         .image-container {
             margin-top: 30px;
