--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         }
         body {
             font-family: 'Helvetica', sans-serif;
-            background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapers.com%2Fimages%2Fhd%2Fpure-black-oled-pnh30c25986brd8t.jpg&f=1&nofb=1&ipt=03f1b235808b641a554ed78088f5e30bb914e905e3698bad47272abc9a50e00c&ipo=images');
-            background-size: cover;
-            background-position: center;
+          background-color: #000000;
             color: white;
             height: 100vh;
             display: flex;
@@ -24,7 +22,7 @@
             padding: 20px;
         }
         .container {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0);
             border-radius: 10px;
             padding: 40px;
             max-width: 600px;
