--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
         h1 {
             font-size: 3.5em;
-            color: #4993c8;
+            color: #c0c0c0;
             margin-bottom: 20px;
         }
         p {
