--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
         }
         .quiz-question {
             font-size: 1.5em;
-            margin-bottom: 10px;
-            margin-top: 20px; /* Add space before question */
+            margin-bottom: 20px; /* More space between question and options */
         }
         .quiz-options {
-            margin: 10px 0;
+            margin-bottom: 30px; /* More space between options and next question */
         }
         .quiz-options input {
             margin-right: 10px;
@@ -109,52 +108,36 @@
         <div class="quiz-container" id="quiz">
             <h2>LeBron James Quiz!</h2>
 
-            <!-- Question 2 -->
-            <div class="quiz-question" id="question2">How many NBA championships has LeBron won?</div>
+            <!-- Question 1 -->
+            <div class="quiz-question" id="question1">How many NBA championships has LeBron won?</div>
             <div class="quiz-options">
-                <input type="radio" name="q2" id="q2-a" value="4"> 4<br>
-                <input type="radio" name="q2" id="q2-b" value="5"> 5<br>
-                <input type="radio" name="q2" id="q2-c" value="6"> 6<br>
+                <input type="radio" name="q1" id="q1-a" value="4"> 4<br>
+                <input type="radio" name="q1" id="q1-b" value="5"> 5<br>
+                <input type="radio" name="q1" id="q1-c" value="6"> 6<br>
+            </div>
+
+            <!-- Question 2 -->
+            <div class="quiz-question" id="question2">What year did LeBron first enter the NBA?</div>
+            <div class="quiz-options">
+                <input type="radio" name="q2" id="q2-a" value="2003"> 2003<br>
+                <input type="radio" name="q2" id="q2-b" value="2001"> 2001<br>
+                <input type="radio" name="q2" id="q2-c" value="2004"> 2004<br>
             </div>
 
             <!-- Question 3 -->
-            <div class="quiz-question" id="question3">What year did LeBron first enter the NBA?</div>
+            <div class="quiz-question" id="question3">What is LeBron's nickname?</div>
             <div class="quiz-options">
-                <input type="radio" name="q3" id="q3-a" value="2003"> 2003<br>
-                <input type="radio" name="q3" id="q3-b" value="2001"> 2001<br>
-                <input type="radio" name="q3" id="q3-c" value="2004"> 2004<br>
+                <input type="radio" name="q3" id="q3-a" value="King James"> King James<br>
+                <input type="radio" name="q3" id="q3-b" value="The King"> The King<br>
+                <input type="radio" name="q3" id="q3-c" value="King of LA"> King of LA<br>
             </div>
 
             <!-- Question 4 -->
-            <div class="quiz-question" id="question4">What is LeBron's nickname?</div>
+            <div class="quiz-question" id="question4">Which team did LeBron play for in 2010-2014?</div>
             <div class="quiz-options">
-                <input type="radio" name="q4" id="q4-a" value="King James"> King James<br>
-                <input type="radio" name="q4" id="q4-b" value="The King"> The King<br>
-                <input type="radio" name="q4" id="q4-c" value="King of LA"> King of LA<br>
-            </div>
-
-            <!-- Question 5 -->
-            <div class="quiz-question" id="question5">Which team did LeBron play for in 2010-2014?</div>
-            <div class="quiz-options">
-                <input type="radio" name="q5" id="q5-a" value="Miami Heat"> Miami Heat<br>
-                <input type="radio" name="q5" id="q5-b" value="Cleveland Cavaliers"> Cleveland Cavaliers<br>
-                <input type="radio" name="q5" id="q5-c" value="Los Angeles Lakers"> Los Angeles Lakers<br>
-            </div>
-
-            <!-- Question 6 -->
-            <div class="quiz-question" id="question6">How many MVP awards does LeBron have?</div>
-            <div class="quiz-options">
-                <input type="radio" name="q6" id="q6-a" value="4"> 4<br>
-                <input type="radio" name="q6" id="q6-b" value="2"> 2<br>
-                <input type="radio" name="q6" id="q6-c" value="3"> 3<br>
-            </div>
-
-            <!-- Question 7 -->
-            <div class="quiz-question" id="question7">LeBron was drafted in which position?</div>
-            <div class="quiz-options">
-                <input type="radio" name="q7" id="q7-a" value="1st Overall"> 1st Overall<br>
-                <input type="radio" name="q7" id="q7-b" value="5th Overall"> 5th Overall<br>
-                <input type="radio" name="q7" id="q7-c" value="10th Overall"> 10th Overall<br>
+                <input type="radio" name="q4" id="q4-a" value="Miami Heat"> Miami Heat<br>
+                <input type="radio" name="q4" id="q4-b" value="Cleveland Cavaliers"> Cleveland Cavaliers<br>
+                <input type="radio" name="q4" id="q4-c" value="Los Angeles Lakers"> Los Angeles Lakers<br>
             </div>
 
             <button class="button" onclick="checkAnswers()">Submit Quiz</button>
@@ -184,40 +167,32 @@
             let score = 0;
             let resultMessage = "";
 
+            // Question 1
+            let q1 = document.querySelector('input[name="q1"]:checked');
+            if (q1 && q1.value === "4") score++;
+
             // Question 2
             let q2 = document.querySelector('input[name="q2"]:checked');
-            if (q2 && q2.value === "4") score++;
+            if (q2 && q2.value === "2003") score++;
 
             // Question 3
             let q3 = document.querySelector('input[name="q3"]:checked');
-            if (q3 && q3.value === "2003") score++;
+            if (q3 && q3.value === "King James") score++;
 
             // Question 4
             let q4 = document.querySelector('input[name="q4"]:checked');
-            if (q4 && q4.value === "King James") score++;
-
-            // Question 5
-            let q5 = document.querySelector('input[name="q5"]:checked');
-            if (q5 && q5.value === "Miami Heat") score++;
-
-            // Question 6
-            let q6 = document.querySelector('input[name="q6"]:checked');
-            if (q6 && q6.value === "4") score++;
-
-            // Question 7
-            let q7 = document.querySelector('input[name="q7"]:checked');
-            if (q7 && q7.value === "1st Overall") score++;
+            if (q4 && q4.value === "Miami Heat") score++;
 
             // Display numerical score
-            document.getElementById("score").innerText = "Your score: " + score + "/6";
+            document.getElementById("score").innerText = "Your score: " + score + "/4";
 
             // Display message based on score
-            if (score === 6) {
-                resultMessage = "🎉 Perfect! You are a true LeBron expert!";
-            } else if (score >= 4) {
-                resultMessage = "Not bad! You're a big LeBron fan!";
+            if (score === 4) {
+                resultMessage = "🎉 Perfect! You are a true LeBron fan! 🎉";
+            } else if (score >= 3) {
+                resultMessage = "Great job! You're a big LeBron fan!";
             } else {
-                resultMessage = "Keep learning, you're getting there!";
+                resultMessage = "Not bad, but you can do better!";
             }
 
             document.getElementById("result").innerText = resultMessage;
