--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
 
             // Display message based on score
             if (score === 4) {
-                resultMessage = "🎉 Perfect! You are a true LeBron fan! 🎉";
+                resultMessage = "Perfect! You bleed LeBron. A true disciple of the GOAT!";
             } else if (score >= 3) {
-                resultMessage = "Great job! You're a big LeBron fan!";
+                resultMessage = "Decent, but real LeBron fans don’t miss. Step it up.";
             } else {
-                resultMessage = "Not bad, but you can do better!";
+                resultMessage = "Pathetic. Delete this quiz, delete your account, and rethink your life";
             }
 
             document.getElementById("result").innerText = resultMessage;
