--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             } else if (score >= 3) {
                 resultMessage = "Decent, but real LeBron fans don’t miss. Step it up.";
             } else {
-                resultMessage = "Pathetic. Delete this quiz, delete your account, and rethink your life";
+                resultMessage = "Delete this quiz and rethink your life";
             }
 
             document.getElementById("result").innerText = resultMessage;
